# FastAD

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  clean-build.sh  index.html  install.sh  setup.sh
.circleci/: config.yml
benchmark/: CMakeLists.txt  ad_benchmark.cpp  constant_eager_benchmark.cpp  foreach_benchmark.cpp  normal_benchmark.cpp  prod_benchmark.cpp  sum_benchmark.cpp
benchmark/ref/: normal_benchmark_res.py
demo/: demo1.cpp  main.cpp
docs/: index.html
example/: CMakeLists.txt  README.md  black_scholes.cpp  main.cpp
example/ceres_3layer_neural_net/: CMakeLists.txt  src.cpp
examples/: README.md  main.cpp
googletest/: ReadMe.txt  googletest.vcxproj  googletest.vcxproj.filters
googletest/Debug/: googletest.idb.REMOVED.git-id  gtest-all.obj.REMOVED.git-id  gtest_main.obj.REMOVED.git-id
googletest/Debug/googletest.tlog/: CL.command.1.tlog  CL.read.1.tlog.REMOVED.git-id  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  googletest.lastbuildstate  lib.command.1.tlog
include/: adeval.h  adeval.hpp  adforward.hpp  adfunction.hpp  adfunction.hpp.REMOVED.git-id  adhessian.hpp  adjacobian.hpp  admath.h  admath.h.REMOVED.git-id  admath.hpp  admath.hpp.REMOVED.git-id  adnode.h  adnode.h.REMOVED.git-id  adnode.hpp  adnode.hpp.REMOVED.git-id  advec.h  advec.hpp  autodiff.h  autodiff.hpp  binaryop.h  dualnum.h  dualnum.hpp  expr.h  fastad  forwardvar.hpp  main.cpp  test.cpp  test.h  testgarbage.h  typeexpr.h  utility.hpp  utils.h
include/fastad/: adeval.hpp  adforward.hpp  adjacobian.hpp  admath.hpp  dualnum.hpp
include/fastad_bits/: adeval.hpp  adforward.hpp  adhessian.hpp  admath.hpp  adnode.hpp  advec.hpp  binary.hpp  bind.hpp  constant.hpp  dot.hpp  dualnum.hpp  eq.hpp  eval.hpp  exgen.hpp  expr_base.hpp  for_each.hpp  forward.hpp  glue.hpp  hessian.hpp  if_else.hpp  ifelse.hpp  jacobian.hpp  mat.hpp  math.hpp  matrix.hpp  node.hpp  norm.hpp  pow.hpp  prod.hpp  reverse.hpp  shape_traits.hpp  sum.hpp  type_traits.hpp  unary.hpp  utility.hpp  value_view.hpp  var.hpp  var_view.hpp  vec.hpp
include/fastad_bits/forward/: core.hpp
include/fastad_bits/reverse/: core.hpp  stat.hpp
include/fastad_bits/util/: numeric.hpp  ptr_pack.hpp  shape_traits.hpp  size_pack.hpp  type_traits.hpp  value.hpp
libs/: CMakeLists.txt
make/: Makefile  admath_unittest.REMOVED.git-id  admath_unittest.o.REMOVED.git-id  adnode_unittest.REMOVED.git-id  adnode_unittest.o.REMOVED.git-id  all  all.sh  all_unittest.REMOVED.git-id  all_unittest.o.REMOVED.git-id  autodiff_unittest.REMOVED.git-id  autodiff_unittest.o.REMOVED.git-id  binaryop_unittest.REMOVED.git-id  binaryop_unittest.o.REMOVED.git-id  dualnum_unittest.REMOVED.git-id  dualnum_unittest.o.REMOVED.git-id  gtest-all.o.REMOVED.git-id  gtest_main.a.REMOVED.git-id  gtest_main.o.REMOVED.git-id  ultimate_unittest.REMOVED.git-id  ultimate_unittest.o.REMOVED.git-id  utils_unittest.REMOVED.git-id  utils_unittest.o.REMOVED.git-id
src/: Makefile  adcompose_unittest.cpp  adeval_unittest.cpp  adeval_unittest.h  adeval_unittest.hpp  admath_unittest.cpp  admath_unittest.h  admath_unittest.hpp  adnode_unittest.cpp  adnode_unittest.cpp.REMOVED.git-id  adnode_unittest.h  adnode_unittest.hpp  advec_unittest.cpp  advec_unittest.h  advec_unittest.hpp  all_unittest.cpp  autodiff_unittest.cpp  autodiff_unittest.h  binaryop_unittest.cpp  binaryop_unittest.h  dualnum_unittest.cpp  dualnum_unittest.h  dualnum_unittest.hpp  forwardvar_unittest.cpp  hessian_unittest.cpp  main.cpp  test.cpp  ultimate_unittest.cpp  ultimate_unittest.h  ultimate_unittest.hpp  utils_unittest.cpp  utils_unittest.h
test/: CMakeLists.txt  ad_inttest.cpp  adcompose_unittest.cpp  adeval_unittest.cpp  adfunction_unittest.cpp  admath_unittest.cpp  adnode_unittest.cpp  adnode_unittest.cpp.REMOVED.git-id  advec_unittest.cpp  base_fixture.hpp  binary_unittest.cpp  bind_unittest.cpp  dot_unittest.cpp  dualnum_unittest.cpp  eq_unittest.cpp  eval_unittest.cpp  exgen_fixture.hpp  exgen_unittest.cpp  forward_unittest.cpp  forwardvar_unittest.cpp  glue_unittest.cpp  hessian_unittest.cpp  if_else_unittest.cpp  ifelse_unittest.cpp  jacobian_unittest.cpp  mat_unittest.cpp  math_unittest.cpp  node_inttest.cpp  node_unittest.cpp  norm_unittest.cpp  pow_unittest.cpp  prod_unittest.cpp  sum_unittest.cpp  type_traits_unittest.cpp  ultimate_unittest.cpp  unary_unittest.cpp  utility_unittest.cpp  var_view_unittest.cpp  vec_unittest.cpp
test/forward/core/: dualnum_unittest.cpp  forward_unittest.cpp
test/integration/: ad_inttest.cpp  node_inttest.cpp
test/reverse/core/: binary_unittest.cpp  bind_unittest.cpp  det_unittest.cpp  dot_unittest.cpp  eq_unittest.cpp  eval_unittest.cpp  for_each_unittest.cpp  glue_unittest.cpp  hessian_unittest.cpp  if_else_unittest.cpp  log_det_unittest.cpp  math_unittest.cpp  norm_unittest.cpp  pow_unittest.cpp  prod_unittest.cpp  sqrt_unittest.cpp  sum_unittest.cpp  unary_unittest.cpp  var_unittest.cpp  var_view_unittest.cpp
test/reverse/core/tmp/: test_unary.cpp
test/reverse/stat/: bernoulli_unittest.cpp  cauchy_unittest.cpp  normal_unittest.cpp  uniform_unittest.cpp  wishart_unittest.cpp
test/reverse/stat/ref/: bernoulli_ref.py  cauchy_ref.py  normal_ref.py  uniform_ref.py  wishart_ref.py
test/testutil/: base_fixture.hpp
test/util/: GenTestData.nb  Test.txt  type_traits_unittest.cpp  value_unittest.cpp
vs/: ReadMe.txt  stdafx.cpp  vs.cpp  vs.sln  vs.vcxproj  vs.vcxproj.filters
vs/Debug/: dualnum_unittest.obj.REMOVED.git-id  googletest.lib.REMOVED.git-id  googletest.pdb.REMOVED.git-id  vc140.idb.REMOVED.git-id  vc140.pdb.REMOVED.git-id
vs/Debug/vs.tlog/: CL.command.1.tlog  CL.read.1.tlog.REMOVED.git-id  (+1 more)
vs_autodiff/: vs_autodiff.sln
vs_autodiff/demo/: demo.vcxproj  demo.vcxproj.filters  demo2.cpp
vs_autodiff/examples/: examples.vcxproj  examples.vcxproj.filters
vs_autodiff/googletest/: ReadMe.txt  googletest.vcxproj  googletest.vcxproj.filters
vs_autodiff/vs_autodiff/: cpp.hint  vs_autodiff.vcxproj  vs_autodiff.vcxproj.REMOVED.git-id  vs_autodiff.vcxproj.filters
(+46 files in other folders)
